# epub-tools

./: Cargo.toml  README.md
.github/workflows/: build-binaries-for-release.yml  create-release.yml
src/: device_profiles.rs  disk_cache.rs  download.rs  downloader.rs  embed_images.rs  embed_imgs.rs  image_optimizer.rs  main.rs
