[package]
name = "epub-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
quick-xml = "0.37.1"
srcset-parse = "0.1.0"
zip = "2.2.2"
reqwest = { version = "0.12.9", features = ["blocking"] }
backon = "1.3.0"
congestion-limiter = "0.1.0"
futures = "0.3.31"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
rkv = "0.19.0"
dirs = "5.0.1"
kv = { version = "0.24.0", features = ["bincode", "bincode-value"] }
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled", "blob"] }
bincode = "1.3.3"
cacache = { version = "13.1.0", default-features = false, features = ["tokio-runtime", "mmap"] }
cache_control = "0.2.0"
rayon = "1.10.0"
pin-project = "1.1.7"
human_bytes = "0.4.3"
sha2 = "0.10.8"
hex = "0.4.3"
pathdiff = "0.2.3"
infer = "0.16.0"
