[package]
name = "epub-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
quick-xml = "0.37.1"
srcset-parse = "0.1.0"
zip = "2.2.2"
reqwest = { version = "0.12.9" }
backon = "1.3.0"
futures = "0.3.31"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
bincode = "1.3.3"
cache_control = "0.2.0"
rayon = "1.10.0"
human_bytes = "0.4.3"
sha2 = "0.10.8"
hex = "0.4.3"
pathdiff = "0.2.3"
infer = "0.16.0"
mozjpeg = {version = "0.10.12", features = ["nasm_simd"]}
image = "0.25.5"
oxipng = { version = "9.0", features = ["zopfli", "filetime"], default-features = false }
indicatif = "0.17.9"
tokio-stream = "0.1.17"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
lto = "thin"
